--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,11 @@
 <div class="test">
     <h3>Đây là Component Home</h3>
     <h2>Chào bạn {{name}}</h2>
+    <input value="{{name}}"/>
+    <br />
+    <input [value]="name" title="đây là name"/>
+    <br />
+    <input [value]="name" title="đây là {{name}}"/>
+    <br />
+    <input [value]="name" [title]="'đây là ' + name"/>
 </div>
