--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,9 +1,8 @@
 <div class="test">
     <h3>Đây là Component Home</h3>
-    <h2>Chào bạn {{name}}</h2>
     <br/>
-    <h2 *ngIf="age > 18">Bạn quá già rồi</h2>
-    <h2 *ngIf="age <= 18">Bạn còn trẻ lắm</h2>
-
+    <input type="text" [(ngModel)]="name"/>
+    <h2>Chào bạn {{name}}</h2>
+    <button (click)="resetName()">Reset tên</button>
     
 </div>
