--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,8 +1,12 @@
 <div class="test">
     <h3>Đây là Component Home</h3>
     <br/>
-    <input type="text" [(ngModel)]="name"/>
-    <h2>Chào bạn {{name}}</h2>
-    <button (click)="resetName()">Reset tên</button>
-    
+    <input type="text" [(ngModel)]="age"/>
+    <h3>Tuổi bạn là {{age}}</h3>
+    <!-- <h2 *ngIf="age<=18">Bạn còn trẻ quá</h2>
+    <h2 *ngIf="age>18">Bạn quá già rồi</h2> -->
+
+    <div *ngIf="age <=18; then tre; else gia"></div>
+    <ng-template #tre><h2>Bạn còn trẻ quá</h2></ng-template>
+    <ng-template #gia><h2>Bạn quá già rồi</h2></ng-template>
 </div>
