--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -2,5 +2,24 @@
     border: 1px solid;
     padding: 10px;
     box-shadow: 5px 10px red;
-    width: 400px;
+    width: 600px;
+}
+
+.table,
+td,
+th {
+    border: 1px solid black;
+    border-collapse: collapse;
+  }
+
+td,
+th {
+    min-width: 100px;
+  }
+
+.right{
+    text-align: right;
+}
+.so-am{
+    color: red;
 }
