--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,9 @@
-<h1>Hello World</h1>
-<h2>Welcome to Angular 12</h2>
-<h2>Chúc bạn thành công</h2>
-<app-home></app-home>
+<h1>Welcom to Angular</h1>
+<nav>
+  <ul>
+    <li><a routerLink="/about" routerLinkActive="active" ariaCurrentWhenActive="page">About Component</a></li>
+    <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home Component</a></li>
+  </ul>
+</nav>
+
+<router-outlet></router-outlet>
