--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -1,5 +1,5 @@
 <p appHighLight style="width: 200px;">about works!</p>
-<p [appHighLight] = 'myColor' >about works!</p>
+<!-- <p [appHighLight] = 'myColor' >about works!</p> -->
 <ul [ngSwitch]="loginName">
     <li *ngSwitchCase="'user'">
     <p>User is logged in ...</p>
@@ -12,3 +12,6 @@
         <p>Please choose  login name</p>
     </li>
 </ul>
+<span>Counter = {{ counter}}</span>
+<br/>
+<span>Counter ^2= {{ counterBinhphuong}}</span>
