--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -14,5 +14,8 @@
             {{district}}
         </option>
       </select>
-    
+      <br/>
+      <span>Counter = {{ counter}}</span>
+      <br/>
+      <span>Counter ^2= {{ counterBinhphuong}}</span>
 </div>
