--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,6 +5,7 @@
     <li><a routerLink="/home" routerLinkActive="active" ariaCurrentWhenActive="page">Home Component</a></li>
     <li><a routerLink="/templateform" routerLinkActive="active" ariaCurrentWhenActive="page">Template Driven Form Component</a></li>
     <li><a routerLink="/reactiveform" routerLinkActive="active" ariaCurrentWhenActive="page">Reactive Form Component</a></li>
+    <li><a routerLink="/getdata" routerLinkActive="active" ariaCurrentWhenActive="page">Get Data Component</a></li>
   </ul>
 </nav>
 
